@@ -1,3 +1,7 @@
+Thu Jun 10 23:14:36 BST 2004  Tom Gilbert <tom@linuxbrit.co.uk>
+
+  * Support full X geometry flags
+
 Sat Jan 03 19:04:11 EST 2004  Paul Duncan <pabs@pablotron.org>,
 
   * removed extraneous XFlush
